[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "waygraph"
version = "0.1.0"
description = "Toolkit for structural analysis of autonomous driving scenario datasets, with topology fingerprinting and OpenStreetMap matching"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [
    {name = "Network Dreamer Authors"},
]
keywords = [
    "autonomous-driving",
    "waymo",
    "road-network",
    "intersection",
    "topology",
    "traffic",
    "openstreetmap",
    "graph-analysis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "numpy>=1.22.0",
    "scipy>=1.8.0",
    "networkx>=2.8",
    "shapely>=2.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.5.0",
]
osm = [
    "osmnx>=1.6.0",
]
womd = [
    "tensorflow>=2.11.0",
]
all = [
    "matplotlib>=3.5.0",
    "osmnx>=1.6.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/network-dreamer/waygraph"
Documentation = "https://waygraph.readthedocs.io"
Repository = "https://github.com/network-dreamer/waygraph"
Issues = "https://github.com/network-dreamer/waygraph/issues"

[tool.setuptools.packages.find]
include = ["waygraph*"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP"]
ignore = ["D100", "D104", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
